# finance-visualize

./: main.py  pyproject.toml  requirements.txt  sectors.csv  symbols.txt  tv_data_3mo.json
