[project]
name = "finance-visualize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mplfinance>=0.12.10b0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "yfinance>=0.2.66",
]
